--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "html-webpack-live-reload-plugin": "^1.0.12",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "node-sass": "^7.0.1",
     "prettier": "2.5.1",
     "prettier-eslint-cli": "^5.0.1",
@@ -27,7 +28,7 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "dev": "webpack-dev-server --config webpack.config.js",
-    "build":"webpack"
+    "build": "webpack"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
