--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dev": "webpack-dev-server --config webpack.config.js",
     "build": "webpack",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
