--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "autoprefixer": "^10.4.2",
     "bootstrap": "^5.1.3",
     "datatables.net-dt": "^1.11.4",
-    "datatables.net-responsive": "^2.2.9",
-    "datatables.net-select": "^1.3.4",
+    "datatables.net-responsive-dt": "^2.2.9",
     "jquery": "^3.6.0",
     "pleasejs": "^0.4.2",
     "popper.js": "^1.16.1",
     "postcss-loader": "^6.2.1",
-    "serve": "^13.0.2"
+    "serve": "^13.0.2",
+    "validate.js": "^0.13.1"
   },
   "main": "webpack.config.js",
   "homepage": "https://jssanji03.github.io/webpack_addTable"
